--- a/app/index.html
+++ b/app/index.html
@@ -354,7 +354,7 @@
                 Только с 7 по 13 июля скидка на сезонные фрукты и овощи до 50%. Торопитесь!
                </span>
               
-                <a class="top-slider__item-link btn" href="#">
+                <a class="top-slider__item-link btn" href="/catalog-page.html">
                   Купить сейчас
                 </a>
               </div>
